# banking_marketing_prediction

./: README.md
bank_marketing/: pyproject.toml
bank_marketing/.ipynb_checkpoints/: pyproject-checkpoint.toml
bank_marketing/artifacts/: final_model.joblib  final_preprocessor_features.joblib
bank_marketing/bank_marketing/: app.py  test_json.txt
bank_marketing/bank_marketing/schemas/: schemas.py
bank_marketing/mlruns/0/: meta.yaml
bank_marketing/mlruns/mlruns/0/: meta.yaml
bank_marketing/mlruns/mlruns/mlruns/0/: meta.yaml
bank_marketing/notebooks/: EDA.ipynb
bank_marketing/notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  Model-checkpoint.ipynb
bank_marketing/notebooks/bank_final_model_2024-12-01_23-44-58/: report_testing_RandomForest.csv
bank_marketing/notebooks/mlruns/0/: meta.yaml
bank_marketing/notebooks/mlruns/352598541640565203/: meta.yaml
bank_marketing/notebooks/mlruns/352598541640565203/385be482c1654fdfb8df8168522964d7/: meta.yaml
bank_marketing/notebooks/mlruns/352598541640565203/9d8c9c7a58bd468c867a9aad71997a26/: meta.yaml
bank_marketing/notebooks/mlruns/352598541640565203/c10240d8f2c242e28a6843610354664d/: meta.yaml
bank_marketing/notebooks/mlruns/666169842104593427/: meta.yaml
bank_marketing/notebooks/mlruns/666169842104593427/01905309b5544af4a3e66c7b82789383/: meta.yaml
bank_marketing/notebooks/mlruns/666169842104593427/02d8547e0a6943ce8bc490e44a1637d9/: meta.yaml
bank_marketing/notebooks/mlruns/666169842104593427/04e750917a074c3488f85137423fbcf8/: meta.yaml
(+248 files in other folders)
