[tool.poetry]
name = "bank-marketing"
version = "0.1.0"
description = ""
authors = ["romaro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xgboost = "^2.1.4"
mlflow = "^2.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
